dnl process this file with autoconf to generate the configure script

AC_INIT
AC_CONFIG_SRCDIR([ogmmerge.cpp])
AM_INIT_AUTOMAKE(ogmtools,1.5)

AC_PROG_CC
AC_PROG_CXX
m4_warn([obsolete],
[AC_PROG_GCC_TRADITIONAL is obsolete; use AC_PROG_CC
])dnl
AC_REQUIRE(AC_PROG_CC)
AC_PROG_CPP
AC_PROG_RANLIB

XIPH_PATH_OGG()
XIPH_PATH_VORBIS()
PATH_AVILIB()
PATH_DEBUG()
PATH_PROFILING()

dnl
dnl libdvdread support
dnl

have_dvdread=no
AM_PATH_LIBDVDREAD(AC_DEFINE(HAVE_LIBDVDREAD))
AM_CONDITIONAL(HAVE_LIBDVDREAD, test x"$have_dvdread" = "xyes")

AC_CHECK_FUNCS(fseeko)
if test x${ac_cv_func_fseeko} != xyes; then
AC_DEFINE(NEED_FSEEKO)
fi

dnl Check for headers
m4_warn([obsolete],
[The preprocessor macro 'STDC_HEADERS' is obsolete.
  Except in unusual embedded environments, you can safely include all
  C89 headers unconditionally.])dnl
# Autoupdate added the next two lines to ensure that your configure
# script's behavior did not change.  They are probably safe to remove.
AC_CHECK_INCLUDES_DEFAULT
AC_PROG_EGREP


AC_CONFIG_FILES([Makefile avilib/Makefile])
AC_OUTPUT
