dnl process this file with autoconf to generate the configure script

AC_INIT
AC_CONFIG_SRCDIR([ogmmerge.cpp])
AM_INIT_AUTOMAKE(ogmtools,1.5)

AC_PROG_CC
AC_PROG_CXX
AC_PROG_CPP
AC_PROG_RANLIB
PKG_PROG_PKG_CONFIG

# Check for Ogg library (version 1.0 or higher)
PKG_CHECK_MODULES([OGG], [ogg >= 1.0], [
    AC_SUBST([OGG_CFLAGS])
    AC_SUBST([OGG_LIBS])
], [
    AC_MSG_ERROR([Ogg library not found. Please install libogg-dev or similar.])
])
# Check for vorbis library (version 1.0 or higher)
PKG_CHECK_MODULES([VORBIS], [vorbis >= 1.0], [
    AC_SUBST([VORBIS_CFLAGS])
    AC_SUBST([VORBIS_LIBS])
], [
    AC_MSG_ERROR([Vorbis library not found. Please install libvorbis-dev or similar.])
])
# Check for vorbisenc library (version 1.0 or higher)
PKG_CHECK_MODULES([VORBISENC], [vorbisenc >= 1.0], [
    AC_SUBST([VORBISENC_CFLAGS])
    AC_SUBST([VORBISENC_LIBS])
], [
    AC_MSG_ERROR([Vorbisenc library not found. Please install libvorbisenc-dev or similar.])
])
PATH_AVILIB()
PATH_DEBUG()
PATH_PROFILING()

dnl
dnl libdvdread support
dnl

have_dvdread=no
AM_PATH_LIBDVDREAD(AC_DEFINE(HAVE_LIBDVDREAD))
AM_CONDITIONAL(HAVE_LIBDVDREAD, test x"$have_dvdread" = "xyes")

AC_CHECK_FUNCS(fseeko)
if test x${ac_cv_func_fseeko} != xyes; then
AC_DEFINE(NEED_FSEEKO)
fi

dnl Check for headers
AC_CHECK_INCLUDES_DEFAULT
AC_PROG_EGREP


AC_CONFIG_FILES([Makefile avilib/Makefile])
AC_OUTPUT
